tests/machine/x/swift/group_by_left_join.error
/tmp/TestSwiftCompiler_VMValid_Goldengroup_by_left_join3493418387/001/main.swift:35:4: error: consecutive statements on a line must be separated by ';'
33 | 	}
34 | 	return _tmp.map { g in ["name": g.key, "count": g.items.filter { r in (r["o"] as! Order) != nil }.count] }
35 | }())
   |    `- error: consecutive statements on a line must be separated by ';'
36 | print("--- Group Left Join ---")
37 | for s in stats as! [[String:Any]] {

/tmp/TestSwiftCompiler_VMValid_Goldengroup_by_left_join3493418387/001/main.swift:35:4: error: expected expression
33 | 	}
34 | 	return _tmp.map { g in ["name": g.key, "count": g.items.filter { r in (r["o"] as! Order) != nil }.count] }
35 | }())
   |    `- error: expected expression
36 | print("--- Group Left Join ---")
37 | for s in stats as! [[String:Any]] {

/tmp/TestSwiftCompiler_VMValid_Goldengroup_by_left_join3493418387/001/main.swift:34:91: warning: comparing non-optional value of type 'Order' to 'nil' always returns true
32 | 	    _tmp.append((key: k, items: v))
33 | 	}
34 | 	return _tmp.map { g in ["name": g.key, "count": g.items.filter { r in (r["o"] as! Order) != nil }.count] }
   |                                                                                           `- warning: comparing non-optional value of type 'Order' to 'nil' always returns true
35 | }())
36 | print("--- Group Left Join ---")

/tmp/TestSwiftCompiler_VMValid_Goldengroup_by_left_join3493418387/001/main.swift:27:50: warning: expression implicitly coerced from 'Any?' to 'Any'
25 | 			let o: Any? = nil
26 | 			let _k = c.name
27 | 			_groups[_k, default: []].append(["c": c, "o": o])
   |                                                  |- warning: expression implicitly coerced from 'Any?' to 'Any'
   |                                                  |- note: provide a default value to avoid this warning
   |                                                  |- note: force-unwrap the value to avoid this warning
   |                                                  `- note: explicitly cast to 'Any' with 'as Any' to silence this warning
28 | 		}
29 | 	}
