tests/machine/x/swift/group_by_left_join.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T15:38:02Z
struct Customer: Equatable {
    var id: Int
    var name: String
}

struct Order: Equatable {
    var customerId: Int
    var id: Int
}

var customers = [Customer(id: 1, name: "Alice"), Customer(id: 2, name: "Bob"), Customer(id: 3, name: "Charlie")]
var orders = [Order(customerId: 1, id: 100), Order(customerId: 1, id: 101), Order(customerId: 2, id: 102)]
var stats = { () -> [Any] in
	var _groups: [String:[[String:Any]]] = [:]
	for c in customers {
		var _m = false
		for o in orders {
			if !(o.customerId == c.id) { continue }
			_m = true
			let _k = c.name
			_groups[_k, default: []].append(["c": c, "o": o])
		}
		if !_m {
			let o: Any? = nil
			let _k = c.name
			_groups[_k, default: []].append(["c": c, "o": o])
		}
	}
	var _tmp: [(key: String, items: [[String:Any]])] = []
	for (k, v) in _groups {
	    _tmp.append((key: k, items: v))
	}
	return _tmp.map { g in ["name": g.key, "count": g.items.filter { r in (r["o"] as! Order) != nil }.count] }
}())
print("--- Group Left Join ---")
for s in stats as! [[String:Any]] {
    print(s["name"]!, "orders:", s["count"]!)
}
